syntax = "proto3";

package erda.core.service.project;

import "google/protobuf/timestamp.proto";
import "common/status.proto";

option go_package = "github.com/erda-project/erda-proto-go/core/service/project/pb";

service Project {
  rpc GetProjectByID(GetProjectByIDReq)returns(GetProjectByIDResp){}
}



message GetProjectByIDReq {
  uint64 id = 1;
  optional string userID = 2;
}

message GetProjectByIDResp {
  common.Status status = 1;
  ProjectDto data = 2;
}

message ProjectDto {
  // project primary key
  uint64 id = 1;
  // project identifies
  string name = 2;
  // project display name
  string displayName = 3;
  // for string ddHook
  reserved 4;
  // org primary key
  uint64 orgID = 5;
  // the project creator userID
  string creatorID = 6;
  // the project logo url
  string logo = 7;
  // the project description
  string desc = 8;
  // the owners' userIDs of the project
  repeated string owners = 9;
  // project active time
  string activeTime = 10;
  // for string joined
  reserved 11;
  // for bool canUnblock
  reserved 12;
  // for string blockStatus
  reserved 13;
  // for bool CanManage
  reserved 14;
  // is the project public
  bool isPublic = 15;
  // for ProjectStats stats
  reserved 16;
  // for ProjectResourceUsage
  reserved 17, 18, 19, 20;
  // for clusterConfig
  reserved 21;
  // for ResourceConfigsInfo resourceConfig
  reserved 22;
  // for map<string, int> RollbackConfig
  reserved 23;
  // for float64 cpuQuota
  reserved 24;
  // for float64 memQuota
  reserved 25;
  google.protobuf.Timestamp createdTime = 26;
  google.protobuf.Timestamp updatedTime = 27;
  // project type
  string type = 28;
}
